Fix layout issue

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -57,6 +57,7 @@ p {
 .post-content {
     padding: 20px 130px;
     font-size: 1.3em;
+    line-height: 1.8em;
 }
 
 .title {
@@ -89,7 +90,6 @@ p {
 	padding-left: 40px;
   list-style: none;
 }
-
 
 .post li:before {
   color: #b0120a;
@@ -187,10 +187,6 @@ blockquote p {
     font-style: italic;
 }
 
-.post-content {
-  line-height: 1.8em;
-}
-
 .post-content img {
     padding: 8px;
     border: 1px solid #DBDBDB !important;
@@ -207,7 +203,12 @@ blockquote p {
 }
 
 .post-content h2 {
-  padding-bottom: 25px;
+  padding-bottom: 15px;
+}
+
+.post-content em {
+  font-weight: 100;
+  font-size: .9em;
 }
 
 .navbar {
